<resources>
    <string name="action_settings">設定</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">一覧表示</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="edit_title">編集画面</string>
    <string name="date_edit_hint">賞味期限(西暦/月/日)</string>
    <string name="detail_edit_hint">詳細</string>
    <string name="bt_date">カレンダー</string>
    <string name="bt_save">保存</string>
    <string name="bt_delete">削除</string>
    <string name="title_edit_hint">商品名</string>
    <string name="add_text">追加</string>
    <string name="app_name">ショウミー</string>
    <string name="link_text">この商品を使う料理を見てみる</string>
    <string name="date_sample">2021/12/22</string>
    <string name="title_sample">マヨネーズ</string>
    <string name="information_sample">賞味期限切れ</string>
</resources>